# pyannote-rs

./: Cargo.toml  LICENSE  README.md
examples/: infinite.rs  max_speakers.rs  save_segments.rs  segmentation_and_speakers.rs
src/: embedding.rs  identify.rs  lib.rs  main.rs  plda.rs  segment.rs  session.rs  wav.rs
src/nn/segmentation/: model.rs
src/nn/speaker_identification/: model.rs
