[package]
name = "native-pyannote-rs"
version = "0.1.3"
edition = "2024"
license = "MIT"
description = "Speaker diarization using pyannote in Rust"
repository = "https://github.com/RustedBytes/pyannote-rs"

[lib]
name = "pyannote_rs"

[dependencies]
anyhow = "1"
hound = "3.5.1"
kaldi-native-fbank = "0.1.0"
ndarray = "0.17"
ort = { version = "2.0.0-rc.11", features = ["ndarray"] }

[features]
default = []
coreml = ["ort/coreml"]
directml = ["ort/directml"]
load-dynamic = ["ort/load-dynamic"]

[[example]]
name = "max_speakers"

[[example]]
name = "infinite"
