[package]
name = "native-pyannote-rs"
version = "0.1.4"
edition = "2024"
license = "MIT"
description = "Speaker diarization using pyannote in Rust"
repository = "https://github.com/RustedBytes/pyannote-rs"

exclude = [
    "src/nn/segmentation/model.bpk",
    "src/nn/speaker_identification/model.bpk",
]

[lib]
name = "pyannote_rs"

[dependencies]
anyhow = "1"
hound = "3.5.1"
kaldi-native-fbank = "0.1.0"
ndarray = "0.17"

burn = { git = "https://github.com/shipovnikAAA/burn", package = "burn", default-features = false, features = ["ndarray", "cpu", "cuda", "wgpu"] }
burn-store = { git = "https://github.com/shipovnikAAA/burn", package = "burn-store", features = ["burnpack"] }
# burn-import = "~0.20"

[features]
default = []

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
incremental = false

[profile.bench]
inherits = "release"

[[example]]
name = "max_speakers"

[[example]]
name = "infinite"
